<!--
  ~ Copyright (c) 2019 - 2025 Ping Identity Corporation. All rights reserved.
  ~
  ~ This software may be modified and distributed under the terms
  ~ of the MIT license. See the LICENSE file for details.
  -->

<resources>
    <string name="app_name">authui</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="password">password</string>
    <string name="logo">Logo</string>
    <string name="signIn">Sign in</string>
    <string name="register">Register</string>
    <string name="signInHeading">Sign in</string>
    <string name="authenticateError">Sorry that isn\'t right. Try again.</string>
    <string name="next">Next</string>
    <string name="content">Content</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_one_time_password">Please Enter One Time Password</string>
    <string name="otpFailed">Invalid One Time Password</string>
    <string name="select_delivery_channel">Select Delivery Channel</string>
    <string name="select_question">Select Question</string>

    <!-- Validation Error -->
    <string name="VALID_USERNAME">{prompt} is not valid</string>
    <string name="UNIQUE">{prompt} Must be Unique</string>
    <string name="MIN_LENGTH">{prompt} Must longer than {minLength} characters</string>
    <string name="MAX_LENGTH">{prompt} Must not longer than {maxLength} characters</string>
    <string name="AT_LEAST_X_CAPITAL_LETTERS">{prompt} must contain at least {numCaps} capital letter(s)</string>
    <string name="AT_LEAST_X_NUMBERS">{prompt} must contain at least {numNums} numberic value(s)</string>
    <string name="VALID_EMAIL_ADDRESS_FORMAT">{prompt} Invalid email address format</string>
    <string name="CANNOT_CONTAIN_CHARACTERS">{prompt} must not contain following characters {forbiddenChars}</string>
    <string name="REQUIRED">{prompt} is required</string>
    <string name="MATCH_REGEXP">{prompt} Regular exp not match {regexp}</string>
    <string name="VALID_TYPE">{prompt} Invalid type {invalidType}</string>
    <string name="VALID_NUMBER">{prompt} Invalid number</string>
    <string name="MINIMUM_NUMBER_VALUE">{prompt} Less than minimum number value</string>
    <string name="MAXIMUM_NUMBER_VALUE">{prompt} Greater than maximum number value</string>
    <string name="VALID_NAME_FORMAT">{prompt} Invalid name format</string>
    <string name="VALID_PHONE_FORMAT">{prompt} Invalid phone format</string>
    <string name="CANNOT_CONTAIN_DUPLICATES">{prompt} must not contain duplicates {duplicateValue}</string>
    <string name="CANNOT_CONTAIN_OTHERS">{prompt} must not contain {disallowedFields}</string>
    <string name="VALID_DATE">{prompt} Invalid date</string>


    <string name="createdate">CreateDate</string>
    <string name="version">version</string>
    <string name="accept">Accept</string>
    <string name="verify_recaptcha">Retry reCAPTCHA</string>
    <string name="privacy">Allow %1$s to access your %2$s</string>

    <!-- Device Profile Callback Fragment -->
    <string name="request_location_rationale">Location is required for Authentication</string>
    <string name="signInDescription">Please provide Username and Password.</string>

    <!-- Social Login -->
    <string name="localAuthentication">Sign-In with Email</string>

</resources>
