<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2019 ForgeRock. All rights reserved.
  ~
  ~ This software may be modified and distributed under the terms
  ~ of the MIT license. See the LICENSE file for details.
  -->

<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

        <!-- Error Message Area -->
        <LinearLayout
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/error" android:layout_marginEnd="8dp"
                android:visibility="gone"
                android:layout_marginStart="8dp">
            <ImageView
                    android:src="@android:drawable/ic_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/errorIcon" android:layout_weight="1"
                    android:contentDescription="@string/content"/>
            <TextView
                    android:text="@string/authenticateError"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:textColor="@color/Red"
                    android:layout_height="match_parent" android:id="@+id/errorMessage" android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_margin="8dp"
                android:id="@+id/callbacks">

        </LinearLayout>

        <!-- Action -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/prevNext">

            <Button
                    android:text="@android:string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancel" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <Button
                    android:text="@string/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/next" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
